More fixes to carousel images on mobile devices

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -96,6 +96,7 @@ blockquote p {
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
     height: 550px;
     width: 100%;
+    height: auto;
 }
 
 .carousel-caption {
